--- a/Download_OCSGE.ipynb
+++ b/Download_OCSGE.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "id": "1LwU8UrfsSY9"
    },
    "outputs": [],
    "source": [
-    "#pip install py7zr\n",
+    "#!pip install py7zr \n",
     "import geopandas as gpd\n",
     "import pandas as pd\n",
     "import requests\n",
@@ -16,12 +16,54 @@
     "import zipfile\n",
     "import py7zr\n",
     "import os\n",
-    "import shutil"
+    "import shutil\n",
+    "import getpass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Gestion du proxy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "http_proxy ········\n"
+     ]
+    }
+   ],
+   "source": [
+    "http_proxy = getpass.getpass(prompt='http_proxy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "https_proxy ········\n"
+     ]
+    }
+   ],
+   "source": [
+    "https_proxy = getpass.getpass(prompt='https_proxy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {
     "id": "LB1d45Mzsvd1"
    },
@@ -32,18 +74,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proxies = { \"http\"  : http_proxy, \"https\" : https_proxy}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "id": "FeYsC64Us-O4"
    },
    "outputs": [],
    "source": [
-    "page = requests.get(req)"
+    "page = requests.get(req, proxies=proxies)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {
     "id": "6kYZyaULtFX0"
    },
@@ -54,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {
     "id": "fuYh-8_-1i7O"
    },
@@ -74,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {
     "id": "aLJYa_aN1xxC"
    },
@@ -94,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -187,7 +238,7 @@
        "4                    Département 38 - Isère - 2018  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,18 +258,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {
     "id": "KVtttsbEa_co"
    },
    "outputs": [],
    "source": [
-    "liste_dep = ['09', '11', '12', '30', '31', '32', '34', '46', '48', '65', '66', '81', '82']"
+    "#liste_dep = ['09', '11', '12', '30', '31', '32', '34', '46', '48', '65', '66', '81', '82']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {
     "id": "5i8g-oZcbl4M"
    },
@@ -240,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -333,13 +384,14 @@
        "6  Département 42 - Loire - 2022  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "liste_ocsge_dep = liste_ocsge_dep[liste_ocsge_dep.year.str.len()==4]\n",
+    "liste_ocsge_dep = liste_ocsge_dep[:20]\n",
     "liste_ocsge_dep.head()"
    ]
   },
@@ -352,7 +404,7 @@
    "outputs": [],
    "source": [
     "for url in liste_ocsge_dep.link:\n",
-    "  with requests.get(url, stream=True) as response:\n",
+    "  with requests.get(url, stream=True, proxies=proxies) as response:\n",
     "    if response.status_code == 200:\n",
     "        with open(url.rsplit('/', 1)[1], 'wb') as file:\n",
     "            for chunk in response.iter_content(chunk_size=8192):\n",
@@ -378,20 +430,11 @@
     "                    os.rename(source_file, destination_file)\n",
     "\n",
     "  ocsge = gpd.read_file('ocsge/OCCUPATION_SOL.shp')\n",
-    "  ocsge.to_parquet(url.rsplit('/', 1)[1].rsplit('.', 1)[0]+\".parquet\")\n",
+    "  ocsge.to_parquet('files_ocsge/' + url.rsplit('/', 1)[1].rsplit('.', 1)[0]+\".parquet\")\n",
     "\n",
     "  shutil.rmtree('ocsge_temp')\n",
     "  shutil.rmtree('ocsge')\n",
     "  os.remove(url.rsplit('/', 1)[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.remove(url.rsplit('/', 1)[1])"
    ]
   }
  ],
