--- a/Download_OCSGE.ipynb
+++ b/Download_OCSGE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "id": "1LwU8UrfsSY9"
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {
     "id": "LB1d45Mzsvd1"
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {
     "id": "FeYsC64Us-O4"
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {
     "id": "6kYZyaULtFX0"
    },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {
     "id": "fuYh-8_-1i7O"
    },
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {
     "id": "aLJYa_aN1xxC"
    },
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -206,17 +206,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>38</td>\n",
-       "      <td>2021</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2022</td>\n",
        "      <td>https://data.geopf.fr/telechargement/download/...</td>\n",
-       "      <td>Département 38 - Isère - 2021</td>\n",
+       "      <td>Département 15 - Cantal - 2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>38</td>\n",
-       "      <td>2018</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2020</td>\n",
        "      <td>https://data.geopf.fr/telechargement/download/...</td>\n",
-       "      <td>Département 38 - Isère - 2018</td>\n",
+       "      <td>Département 15 - Cantal - 2020</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -227,18 +227,18 @@
        "0     01       2021  https://data.geopf.fr/telechargement/download/...   \n",
        "1     01       2018  https://data.geopf.fr/telechargement/download/...   \n",
        "2     01  2018-2021  https://data.geopf.fr/telechargement/download/...   \n",
-       "3     38       2021  https://data.geopf.fr/telechargement/download/...   \n",
-       "4     38       2018  https://data.geopf.fr/telechargement/download/...   \n",
+       "3     15       2022  https://data.geopf.fr/telechargement/download/...   \n",
+       "4     15       2020  https://data.geopf.fr/telechargement/download/...   \n",
        "\n",
        "                                              name  \n",
        "0                      Département 01 - Ain - 2021  \n",
        "1                      Département 01 - Ain - 2018  \n",
        "2  Département 01 - Ain - différentiel - 2018-2021  \n",
-       "3                    Département 38 - Isère - 2021  \n",
-       "4                    Département 38 - Isère - 2018  "
+       "3                   Département 15 - Cantal - 2022  \n",
+       "4                   Département 15 - Cantal - 2020  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,50 +248,47 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "pEE_QgmCbtdA"
-   },
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "Traitement sur des départements spécifiques"
+    "#liste_ocsge.to_json('dep_dispo_2025-01-21.json')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ouverture de la liste et traitement"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 55,
    "metadata": {
     "id": "KVtttsbEa_co"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(198, 4)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#liste_dep = ['09', '11', '12', '30', '31', '32', '34', '46', '48', '65', '66', '81', '82']"
+    "liste_ocsge = pd.read_json('dep_dispo_2025-01-21.json')\n",
+    "liste_ocsge.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "id": "5i8g-oZcbl4M"
-   },
-   "outputs": [],
-   "source": [
-    "#liste_ocsge_dep = liste_ocsge[liste_ocsge.codgeo.isin(liste_dep)].copy()\n",
-    "#liste_ocsge_dep = liste_ocsge_dep[liste_ocsge_dep.year.str.len()==4]\n",
-    "liste_ocsge_dep = liste_ocsge.copy()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "qfb2agILwV-3"
-   },
-   "source": [
-    "Traitement des données annuels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 56,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -345,24 +342,24 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>15</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>https://data.geopf.fr/telechargement/download/...</td>\n",
+       "      <td>Département 15 - Cantal - 2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>15</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>https://data.geopf.fr/telechargement/download/...</td>\n",
+       "      <td>Département 15 - Cantal - 2020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
        "      <td>38</td>\n",
        "      <td>2021</td>\n",
        "      <td>https://data.geopf.fr/telechargement/download/...</td>\n",
        "      <td>Département 38 - Isère - 2021</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>38</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>https://data.geopf.fr/telechargement/download/...</td>\n",
-       "      <td>Département 38 - Isère - 2018</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>42</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>https://data.geopf.fr/telechargement/download/...</td>\n",
-       "      <td>Département 42 - Loire - 2022</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -372,32 +369,163 @@
        "  codgeo  year                                               link  \\\n",
        "0     01  2021  https://data.geopf.fr/telechargement/download/...   \n",
        "1     01  2018  https://data.geopf.fr/telechargement/download/...   \n",
-       "3     38  2021  https://data.geopf.fr/telechargement/download/...   \n",
-       "4     38  2018  https://data.geopf.fr/telechargement/download/...   \n",
-       "6     42  2022  https://data.geopf.fr/telechargement/download/...   \n",
+       "3     15  2022  https://data.geopf.fr/telechargement/download/...   \n",
+       "4     15  2020  https://data.geopf.fr/telechargement/download/...   \n",
+       "6     38  2021  https://data.geopf.fr/telechargement/download/...   \n",
        "\n",
-       "                            name  \n",
-       "0    Département 01 - Ain - 2021  \n",
-       "1    Département 01 - Ain - 2018  \n",
-       "3  Département 38 - Isère - 2021  \n",
-       "4  Département 38 - Isère - 2018  \n",
-       "6  Département 42 - Loire - 2022  "
+       "                             name  \n",
+       "0     Département 01 - Ain - 2021  \n",
+       "1     Département 01 - Ain - 2018  \n",
+       "3  Département 15 - Cantal - 2022  \n",
+       "4  Département 15 - Cantal - 2020  \n",
+       "6   Département 38 - Isère - 2021  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "liste_ocsge_dep = liste_ocsge.copy()\n",
     "liste_ocsge_dep = liste_ocsge_dep[liste_ocsge_dep.year.str.len()==4]\n",
-    "liste_ocsge_dep = liste_ocsge_dep[:20]\n",
+    "liste_ocsge_dep = liste_ocsge_dep\n",
     "liste_ocsge_dep.head()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### traitement spécifique"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Je récupère les fichiers non téléchargés"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import glob\n",
+    "liste_termine = glob.glob(\"files_ocsge/*\")\n",
+    "liste_termine = [file[12:].split('.')[0] for file in liste_termine]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "liste_ocsge_dep['name'] = liste_ocsge_dep.link.map(lambda x :x.split('/')[-1].split('.')[0])\n",
+    "liste_ocsge_dep = liste_ocsge_dep[~liste_ocsge_dep.name.isin(liste_termine)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>codgeo</th>\n",
+       "      <th>year</th>\n",
+       "      <th>link</th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>15</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>https://data.geopf.fr/telechargement/download/...</td>\n",
+       "      <td>OCS-GE_2-0__SHP_LAMB93_D015_2022-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>15</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>https://data.geopf.fr/telechargement/download/...</td>\n",
+       "      <td>OCS-GE_2-0__SHP_LAMB93_D015_2020-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>43</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>https://data.geopf.fr/telechargement/download/...</td>\n",
+       "      <td>OCS-GE_2-0__SHP_LAMB93_D043_2022-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>43</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>https://data.geopf.fr/telechargement/download/...</td>\n",
+       "      <td>OCS-GE_2-0__SHP_LAMB93_D043_2019-01-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   codgeo  year                                               link  \\\n",
+       "3      15  2022  https://data.geopf.fr/telechargement/download/...   \n",
+       "4      15  2020  https://data.geopf.fr/telechargement/download/...   \n",
+       "12     43  2022  https://data.geopf.fr/telechargement/download/...   \n",
+       "13     43  2019  https://data.geopf.fr/telechargement/download/...   \n",
+       "\n",
+       "                                      name  \n",
+       "3   OCS-GE_2-0__SHP_LAMB93_D015_2022-01-01  \n",
+       "4   OCS-GE_2-0__SHP_LAMB93_D015_2020-01-01  \n",
+       "12  OCS-GE_2-0__SHP_LAMB93_D043_2022-01-01  \n",
+       "13  OCS-GE_2-0__SHP_LAMB93_D043_2019-01-01  "
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "liste_ocsge_dep"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Téléchargement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {
     "id": "jf02e6oaqBCX"
    },
