--- a/synthese_carreaux.ipynb
+++ b/synthese_carreaux.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 1,
    "id": "38faa0d4",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 2,
    "id": "d7c4f5ff-00c0-4bfa-99e4-b766495afc28",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 3,
    "id": "ca7bcb7f",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 4,
    "id": "e9ed9c69-e02a-412e-8ad4-88032e3b44a5",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
        "162     93  2021  https://data.geopf.fr/telechargement/download/..."
       ]
      },
-     "execution_count": 133,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 5,
    "id": "6475c44d",
    "metadata": {},
    "outputs": [],
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 6,
    "id": "98c70dd0-cb37-457d-ba5a-bea38dc495f2",
    "metadata": {},
    "outputs": [],
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 7,
    "id": "63af6e51-31c2-46f6-8b43-eb539bc561c1",
    "metadata": {},
    "outputs": [],
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 8,
    "id": "03236c99",
    "metadata": {},
    "outputs": [],
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 9,
    "id": "eb2c1380-4bad-4c74-ab9d-fe38ee62ab3b",
    "metadata": {},
    "outputs": [],
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 10,
    "id": "29048b68-e0ad-446e-8774-755302b3df16",
    "metadata": {},
    "outputs": [],
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 11,
    "id": "2b837242-bb40-43ba-aa51-9a298f82444c",
    "metadata": {},
    "outputs": [],
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 12,
    "id": "f2e97fc2-cdcd-4a2d-8f62-1ea956fdfc55",
    "metadata": {},
    "outputs": [],
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 13,
    "id": "a06fc85e-c198-4096-a982-0a77ebfe9369",
    "metadata": {},
    "outputs": [],
@@ -502,22 +502,246 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 21,
    "id": "897a0fc5-692b-4b48-b310-9b3b9921ff64",
    "metadata": {},
    "outputs": [],
    "source": [
-    "departement['annee'] = np.floor(departement.annee)"
+    "departement['annee'] = np.round(departement.annee).astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 23,
    "id": "722cd5da-5ac8-43ef-810d-fe57e2557c02",
    "metadata": {},
    "outputs": [],
    "source": [
     "departement.to_csv('ocsge_2022_departement_1000m.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "65b09bf2-4616-423f-94fb-2a6c66a4a5d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>codgeo</th>\n",
+       "      <th>annee</th>\n",
+       "      <th>surface</th>\n",
+       "      <th>CS1_1</th>\n",
+       "      <th>CS1_2</th>\n",
+       "      <th>CS2_1</th>\n",
+       "      <th>CS2_2</th>\n",
+       "      <th>CS1</th>\n",
+       "      <th>CS2</th>\n",
+       "      <th>CS1_1_1_1</th>\n",
+       "      <th>...</th>\n",
+       "      <th>CS2_2_1_US4_1_4</th>\n",
+       "      <th>CS2_1_1_1_US4_1_3</th>\n",
+       "      <th>CS2_1_1_3_US4_1_2</th>\n",
+       "      <th>CS2_1_1_2_US4_1_2</th>\n",
+       "      <th>CS2_1_3_US2</th>\n",
+       "      <th>CS2_2_1_US6_2</th>\n",
+       "      <th>CS2_1_1_3_US6_2</th>\n",
+       "      <th>CS2_1_1_2_US4_1_3</th>\n",
+       "      <th>CS1_1_1_2_US4_1_5</th>\n",
+       "      <th>CS1_1_1_2_US6_3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>01</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>5784.836831</td>\n",
+       "      <td>304.321171</td>\n",
+       "      <td>138.794618</td>\n",
+       "      <td>2327.379190</td>\n",
+       "      <td>3014.341853</td>\n",
+       "      <td>443.115789</td>\n",
+       "      <td>5341.721042</td>\n",
+       "      <td>107.631858</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>02</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>7411.143413</td>\n",
+       "      <td>256.527874</td>\n",
+       "      <td>56.267880</td>\n",
+       "      <td>1767.597177</td>\n",
+       "      <td>5330.750482</td>\n",
+       "      <td>312.795754</td>\n",
+       "      <td>7098.347659</td>\n",
+       "      <td>98.143323</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.002598</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>03</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>7379.549457</td>\n",
+       "      <td>240.074890</td>\n",
+       "      <td>75.908901</td>\n",
+       "      <td>1663.995997</td>\n",
+       "      <td>5399.569670</td>\n",
+       "      <td>315.983790</td>\n",
+       "      <td>7063.565666</td>\n",
+       "      <td>82.809843</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>04</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>6995.163289</td>\n",
+       "      <td>100.764348</td>\n",
+       "      <td>682.210154</td>\n",
+       "      <td>4759.972093</td>\n",
+       "      <td>1452.216695</td>\n",
+       "      <td>782.974501</td>\n",
+       "      <td>6212.188788</td>\n",
+       "      <td>31.698451</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>05</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>5689.869883</td>\n",
+       "      <td>88.821989</td>\n",
+       "      <td>1222.686861</td>\n",
+       "      <td>2414.689313</td>\n",
+       "      <td>1963.671720</td>\n",
+       "      <td>1311.508850</td>\n",
+       "      <td>4378.361033</td>\n",
+       "      <td>27.972754</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 191 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  codgeo  annee      surface       CS1_1        CS1_2        CS2_1  \\\n",
+       "0     01   2021  5784.836831  304.321171   138.794618  2327.379190   \n",
+       "1     02   2021  7411.143413  256.527874    56.267880  1767.597177   \n",
+       "2     03   2022  7379.549457  240.074890    75.908901  1663.995997   \n",
+       "3     04   2021  6995.163289  100.764348   682.210154  4759.972093   \n",
+       "4     05   2022  5689.869883   88.821989  1222.686861  2414.689313   \n",
+       "\n",
+       "         CS2_2          CS1          CS2   CS1_1_1_1  ...  CS2_2_1_US4_1_4  \\\n",
+       "0  3014.341853   443.115789  5341.721042  107.631858  ...              0.0   \n",
+       "1  5330.750482   312.795754  7098.347659   98.143323  ...              0.0   \n",
+       "2  5399.569670   315.983790  7063.565666   82.809843  ...              0.0   \n",
+       "3  1452.216695   782.974501  6212.188788   31.698451  ...              0.0   \n",
+       "4  1963.671720  1311.508850  4378.361033   27.972754  ...              0.0   \n",
+       "\n",
+       "   CS2_1_1_1_US4_1_3  CS2_1_1_3_US4_1_2  CS2_1_1_2_US4_1_2  CS2_1_3_US2  \\\n",
+       "0                0.0                0.0                0.0          0.0   \n",
+       "1                0.0                0.0                0.0          0.0   \n",
+       "2                0.0                0.0                0.0          0.0   \n",
+       "3                0.0                0.0                0.0          0.0   \n",
+       "4                0.0                0.0                0.0          0.0   \n",
+       "\n",
+       "   CS2_2_1_US6_2  CS2_1_1_3_US6_2  CS2_1_1_2_US4_1_3  CS1_1_1_2_US4_1_5  \\\n",
+       "0            0.0              0.0                0.0                0.0   \n",
+       "1            0.0              0.0                0.0                0.0   \n",
+       "2            0.0              0.0                0.0                0.0   \n",
+       "3            0.0              0.0                0.0                0.0   \n",
+       "4            0.0              0.0                0.0                0.0   \n",
+       "\n",
+       "   CS1_1_1_2_US6_3  \n",
+       "0         0.000000  \n",
+       "1         0.002598  \n",
+       "2         0.000000  \n",
+       "3         0.000000  \n",
+       "4         0.000000  \n",
+       "\n",
+       "[5 rows x 191 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "departement.head()"
    ]
   },
   {
